--- a/my_trello/front/src/app/auth/components/register/register.component.html
+++ b/my_trello/front/src/app/auth/components/register/register.component.html
@@ -5,12 +5,12 @@
                 <img src="logo.svg" class="trello-logo">
             </a>
             <div class="login-header">Register to Trello</div>
-            <div class="errors"></div>
+            <p-messages class="message" [(value)]="errorMessages" [closable]="false" />
             <form [formGroup]="form" (ngSubmit)="register()">
-                <input pInputText formControlName="name" type="text" placeholder="Name" class="login-name">
-                <input pInputText formControlName="email" type="email" placeholder="Email" class="login-email">
-                <input pInputText formControlName="username" type="text" placeholder="Username" class="login-username">
-                <input pPassword formControlName="password" type="password" placeholder="Password" class="login-password">
+                <input pInputText formControlName="name" type="text" placeholder="Name" class="login-name" />
+                <input pInputText formControlName="email" type="email" placeholder="Email" class="login-email" />
+                <input pInputText formControlName="username" type="text" placeholder="Username" class="login-username" />
+                <input pPassword [feedback]="false" formControlName="password" type="password" placeholder="Password" class="login-password" />
                 <button pButton type="submit" class="login-button">Register</button>
             </form>
             <div class="login-links">
