--- a/my_trello/front/src/app/home/home.component.html
+++ b/my_trello/front/src/app/home/home.component.html
@@ -7,7 +7,8 @@
     <ng-template pTemplate="end">
         <p-button label="Login" [link]="true" routerLink="/login" icon="pi pi-user"/>
         <p-button label="Register" [link]="true" routerLink="/register" icon="pi pi-check"/>
-        <p-menuitem label="Register" routerLink="/register" icon="pi pi-check"/>
+        <p-button label="Boards" [link]="true" routerLink="/boards" icon="pi pi-check"/>
+
     </ng-template>
 </p-menubar>
 <div class="grid home-description">
