--- a/my_trello/front/src/app/boards/boards.component.html
+++ b/my_trello/front/src/app/boards/boards.component.html
@@ -1,11 +1,24 @@
+<top-bar></top-bar>
 <div class="board-list">
     <div class="board-item">
-        <inline-form (onSubmit)="handleSubmit($event)" text="Add new card!" [showButton]="true"></inline-form>
+        <p-card [style]="{ 
+            border: '1px solid #aaaaaa',  
+            borderRadius: '10px',
+            width: '350px',  
+            backgroundColor: '#66CDAA'
+        }">
+            <inline-form (onSubmit)="newBoard($event)" text="Add new card!" [showButton]="true"></inline-form>
+        </p-card>
     </div>
     @for (item of boards; track item) {
         <div class="board-item">
-            <p-card>
-                {{ item.title }}
+            <p-card [style]="{ 
+                border: '1px solid #aaaaaa',  
+                borderRadius: '10px',  
+                width: '350px',  
+                backgroundColor: '#cccccc'
+            }">
+                <inline-form (onSubmit)="editBoard($event, item)" [text]="item.title" [showButton]="true"></inline-form>
             </p-card>
         </div>
     }
