--- a/my_trello/front/src/styles.css
+++ b/my_trello/front/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+html, body{
+    margin: 0px !important;
+    padding: 0px !important;
+}
 .login-page{
     width: 400px;
     margin: 0 auto;
@@ -35,9 +39,9 @@
     padding: 5%;
 }
 
-.inline-form-title {
+/*.inline-form-title {
     width: 300px;
     border-radius: 5px;
     border: 1px solid #cccccc;
     padding: 10px;
-}
+}*/
